# nanny

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
docs/: backends-and-costs.md  index.html
docs/superpowers/specs/: 2026-07-06-corpus-tab-design.md  2026-07-06-history-tab-design.md
nanny/: __init__.py  activity.py  agent_engine_app.py  agents.py  corpus.py  llm.py  profile.py  research.py  schedule.py  security.py  seed_unicef_corpus.py  server.py  sitter.py  sources.py  speech.py  store.py  stores.py  workflow.py
scripts/: deploy.sh
skills/care-tips/: SKILL.md
skills/child-guidance/: SKILL.md  SOURCES.md
tests/: test_activity.py  test_api_sources.py  test_classifier_question_escape.py  test_corpus.py  test_llm_heuristic.py  test_model_error_fallback.py  test_profile.py  test_research.py  test_schedule.py  test_security.py  test_seed_unicef_corpus.py  test_server.py  test_sources.py  test_speech.py  test_store.py  test_workflow.py
tests/eval/: eval_config.yaml  generate_traces.py  metrics_injection.py  metrics_pii.py
tests/eval/datasets/: basic-dataset.json
web/: index.html
