[project]
name = "nanny"
version = "0.1.0"
description = "Local baby activity tracker powered by Google ADK 2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "google-adk>=2.3.0",
    "uvicorn>=0.50.0",
]

[dependency-groups]
dev = [
    "google-agents-cli>=1.0.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    # Needed to exercise DatabaseSessionService in tests: google-adk[db] for
    # the class itself, aiosqlite as a lightweight async driver so tests
    # don't need a real Postgres/Cloud SQL instance.
    "google-adk[db]>=2.3.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.15.20",
    "ty>=0.0.1a0",
    "codespell>=2.2.0,<3.0.0",
]
db = [
    "google-adk[db]>=2.3.0",
    # DatabaseSessionService uses SQLAlchemy's *async* engine, so this must
    # be an async-capable driver — pg8000/psycopg2 (sync) will not work.
    "asyncpg>=0.30.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"]

[tool.ruff.lint.isort]
known-first-party = ["nanny"]

[tool.ty]
[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"

[tool.codespell]
skip = "uv.lock,.venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanny"]
