[project]
name = "nanny"
version = "0.1.0"
description = "Local baby activity tracker powered by Google ADK 2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "google-adk>=2.3.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.50.0",
]

[dependency-groups]
dev = [
    "google-agents-cli>=1.0.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.15.20",
    "ty>=0.0.1a0",
    "codespell>=2.2.0,<3.0.0",
]
# Needed by nanny/agent_engine_app.py (deploy script + _AgentRuntimeBackend
# in nanny/server.py). Bundled into the Cloud Run image unconditionally
# (see Dockerfile) so NANNY_AGENT_ENGINE_RESOURCE_NAME works without a
# separate image; a no-op if that env var is never set.
agent-engine = [
    "google-adk[gcp]>=2.3.0",
]
# Needed only for the opt-in server-side speech-to-text fallback
# (nanny/speech.py, NANNY_STT_ENABLED). The mic button's default engine is the
# browser's free Web Speech API, which needs nothing here.
speech = [
    "google-cloud-speech>=2.27.0",
]
# Needed only by nanny/seed_unicef_corpus.py, to split large PDFs into
# page-range chunks (see _MAX_PAGES_PER_FILE there for why).
corpus-seed = [
    "pypdf>=5.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"]

[tool.ruff.lint.isort]
known-first-party = ["nanny"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are calls-in-defaults by design; the
# others are already special-cased by ruff, File(...) needs to be listed.
extend-immutable-calls = ["fastapi.File"]

[tool.ty]
[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"

[tool.codespell]
skip = "uv.lock,.venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanny"]
